# transformer-feature-extractor

./: .envrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  DEV_SPECIFICATIONS.md  Makefile  README.md  pyproject.toml
configs/: debug.yaml
container/: Dockerfile_gpu  starship.toml
notebooks/: sample.ipynb
scripts/: env.sh  hf.sh
src/: zz_logger_example.py  zz_mp_utils_example.py
src/feature_extractor/: __init__.py  logger.py  typing.py
src/feature_extractor/cli/: greet.py  main.py
src/feature_extractor/configs/: __init__.py  schema.py  schema_test.py
src/feature_extractor/data/: dataset.py  dataset_pretokenized.py  load.py
src/feature_extractor/extractor/: base.py  extractor.py  extractor_test.py
src/feature_extractor/hooks/: __init__.py  attention.py  attention_test.py  base.py  embedding.py  embedding_test.py  layer.py  layer_test.py  mlp.py  mlp_test.py  norm.py  residual.py  results.py
src/feature_extractor/models/: __init__.py  alignment.py  architecture.py  architecture_test.py  base_architecture.py  gemma.py  get_config.py  get_modules.py  gpt2.py  gpt_neox.py  llama.py  load.py  load_test.py
src/feature_extractor/reconstruction/: __init__.py  attention.py  attention_dissection.py  attention_dissection_test.py  attention_output.py  attention_output_test.py  attention_test.py  attention_weights.py  attention_weights_test.py  mlp.py  mlp_test.py  rope.py  rope_test.py
src/project/cli/: greet.py
src/project/configs/: __init__.py  schema.py
src/utils/: mp_utils.py  path.py  typing.py
tests/: test_feature_correctness.py  test_feature_extractor.py  test_feature_extractor_integration.py  test_reconstruction.py  test_supported_models_integration.py
